<resources>
    <string name="app_name">Karuna</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">Grind through these three simple phases of chest workouts to add layers of new upper-body muscle in just eight weeks. The first phase builds endurance, the second boosts strength and the final phase adds explosiveness and speed so you can pack on more size. The entire programme is based on variations of the standard press-up. Its that simple.</string>
    <string name="councelling">
        Hello! \nTell us about the psychological condition you are suffering from and we will try to connect you to our experts as soon as possible.
         \n\nFor this, mention your problem clearly...
    </string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginGet">Login - Get</string>
    <string name="LoginPost">Login - Post</string>
    <string name="App">Login Application</string>
    <string name="LoginStatus">Login Status</string>
    <string name="LoginRole">Login Role</string>
    <string name="Status">Not login</string>
    <string name="Role">Not assigned</string>
    <string name="method">Login Method</string>
    <string name="Choose">Choose Method</string>
    <string-array name="s_hindi_stories_list">
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
        <item>अंजाने में हुए कर्मो का फल</item>
    </string-array>
    <string name="Tadasana_process">
        Stand on the toes. Raise both the hands upward while inhaling gradually and deeply. Look upwards to the sky.(All the four actions should take place simultaneously). Hold your breath inside.\nसीधे खड़े हों, श्वांस लेते हुए दोनों हाथों को ऊपर उठाएं और पैरों की अंगुलियों पर खड़े हों।
    </string>
    <string name="Pad_hastasana_process">Bring both the hands downward from the posture of tadasan and exhale at the same slow and consistent pace and bow the head down to touch the knees, also attempt making the palms touch the floor. Hold your breath out for several seconds and come back to the normal standing posture.\nश्वांस को छोड़ते हुए नीचे की ओर झुकें, दोनों हाथों से जमीन को छुएं। पैर सीधे रखें और कोशिश करें कि सिर घुटनों को छुए।</string>
    <string name="Vajrasan_process">Place the toes completely on the floor and set the haunches on the feet. Both the legs should be in closed contact. Keep the backbone erect and place the palms on the knees. Breathe normally during this posture. The back, neck and head should remain straight.\nदोनों पैरों को घुटनों से मोड़कर वज्रासन में बैठें</string>
    <string name="Ushtrasan_process">Now get up slightly from the vajrasan. Stand on your knees with the toes touching the floor and the heels facing backwards. Almost simultaneously, bend backwards to place the palms on the heels from the backside. Inhale deeply while looking upwards. This will inflate your chest. Hold the breath in for few seconds.\nघुटनों के बल बैठें, श्वांस लेते हुए कमर से पीछे की ओर मुडें और दोनों हाथों से पैरों को छुएं।</string>
    <string name="Yogamudra_process">Exhale slowly and sit on your legs as in vajrasana at the same time, clench together both the palms at the back and stretch upwardly and place the head on the floor so that the chest and the stomach touch the thighs. Hold the breath out for few seconds\nश्वांस छोड़ते हुए वज्रासन में आएं, आगे की ओर झुकें और दोनों हाथों को पीछे ले जाकर योग मुद्रा बनाएं। कोशिश करें कि सिर जमीन को छुए।</string>
    <string name="Ardh_tadasan_process">Inhale deeply. Being seated in the posture of vajrasan, raise both the arms and eyes upwards. Hold the breath inside and stretch the arms as much as you can without pain. Focus your eyes on the hands.\nश्वांस लेते हुए शरीर के ऊपरी हिस्से को उठाएं और वज्रासन में बैठते हुए दोनों हाथों को ऊपर की ओर खींचे।</string>
    <string name="Shashankasan_process">Exhale at the same pace as inhalation in the preceding asan. Simultaneously, sit in the posture of vajrasan and keep both the arms stretched outwardly in front of the chest. Place the palms on the floor, bend from the waist to make the stomach touch the thighs and the head touch the floor. The arms should remain straight with palms touching the floor. Hold the breath outside for few seconds.\nश्वांस छोड़ते हुए आगे की ओर झुके। अपने सिर से जमीन को छुएं। दोनों हाथ सिर के आगे रखें।</string>
    <string name="Bhujangasan_process"> Inhale deeply and pull your waist upwards. Toes and palm should remain at the same place where these were in the previous posture but now the arms should stand straighten. The knees and thighs should touch the floor.Draw your chest and head upwards and raise the head like a snake’s hood. Hold the breath inside and bend the head backwards slightly to stare the sky.\nपैरों को पीछे की ओर खोल दें, दोनों हाथ कमर के बगल में रखें। श्वांस लेते हुए ऊपर की ओर उठें। आसमान की ओर देखें, कुछ देर इसी स्थिति में रहें।</string>
    <string name="Tiryak_bhujangasan_left_right_process">In the posture of bhujangasan, exhale slowing. Now inhale and turn the neck towards the left and try looking at the heel of right foot. Then do the same for other side.\nइस आसन को दो बार करना है। श्वांस छोड़ते हुए पहले बाईं ओर मुड़ें और श्वांस लेते हुए वापस आएं। अब दाईं ओर से यही प्रक्रिया करें।</string>
    <string name="Utkatasan_process">Exhale slowly. With normal breathing sit on the toes. The heels should not touch the floor. Let the calves touch the thighs and knees touch the buttocks. Place both the palms on the knees. Bend the arms on elbows and keep the hands in front of the chest with palms placed on each other in the posture of Namaskar. Back, neck and head should be erect.\nइस बार उष्ट्रासन करते वक्त दोनों पैरों के पंजों पर बैठें।</string>
    <string name="Pranamasana_process">Keep your feet together and balance your weight equally on both the feet. Expand your chest and relax your shoulders. As you breathe in, lift both arms up from the sides, and as you exhale, bring your palms together in front of the chest in prayer position.\nअपने आसन (मैट) के किनारे पर खड़े हो जाएँ, अपने दोनों पंजे एक साथ जोड़ कर रखें और पूरा वजन दोनों पैरों पर समान रूप से डालें। अपनी छाती फुलाएँ और कंधे ढीले रखें। श्वास लेते हुए दोनों हाथ बगल से ऊपर उठाएँ और श्वास छोड़ते हुए हथेलियों को जोड़ते हुए छाती के सामने प्रणाम मुद्रा में ले आएँ।</string>
    <string name="Hastauttanasana_process">Breathing in, lift the arms up and back, keeping the biceps close to the ears. In this pose, the effort is to stretch the whole body up from the heels to the tips of the fingers.\nश्वास लेते हुए हाथों को ऊपर उठाएँ और पीछे ले जाएँ व बाजुओं को कानों के समीप रखें। इस आसन में पूरे शरीर को एड़ियों से लेकर हाथों की उंगलियों तक सभी अंगों को ऊपर की तरफ खींचने का प्रयास करें।</string>
    <string name="Ashwa_sanchalanasana_process">Breathing in, push your right leg back, as far back as possible. Bring the right knee to the floor and look up.\nश्वास लेते हुए जितना संभव हो दाहिना पैर पीछे ले जाएँ, दाहिने घुटने को ज़मीन पर रख सकते हैं, दृष्टि को ऊपर की ओर ले जाएँ।</string>
    <string name="Dandasana_process">As you breathe in, take the left leg back and bring the whole body in a straight line.\nश्वास लेते हुए बाएँ पैर को पीछे ले जाएँ और संपूर्ण शरीर को सीधी रेखा में रखें।</string>
    <string name="Ashtanga_Namaskaar_process">Gently bring your knees down to the floor and exhale. Take the hips back slightly, slide forward, rest your chest and chin on the floor. Raise your posterior a little bit.\nआराम से दोनों घुटने ज़मीन पर लाएँ और श्वास छोडें। अपने कूल्हों को पीछे उपर की ओर उठाएँ I पूरे शरीर को आगे की ओर खिसकाएँI अपनी छाती और ठुड्डी को ज़मीन से छुएँ।</string>
    <string name="Parvatasana_process">Breathing out, lift the hips and the tailbone up to bring the body into an inverted ‘V’ pose.\nश्वास छोड़ते हुए कूल्हों और रीढ़ की हड्डी के निचले भाग को ऊपर उठाएँ, छाती को नीचे झुकाकर एक उल्टे (V) के आकार में आ जाएँ।</string>
    <string name="s1_title_hindi">अंजाने में हुए कर्मो का फल</string>
</resources>