<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".physicalfitness.yoga.SuryaNamaskar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Surya Namaskar (Step-by-step)"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:background="@color/blue_light"
            android:gravity="center"/>

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:videoId="Y5Aos-QQHVE"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="1.Pranamasana(प्रणाम आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_pranamasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Pranamasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="2.Hastauttanasana(हस्तउत्तानासन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_hastauttanasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Hastauttanasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="3.Padhastasna(पादहस्तासन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_pad_hastasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Pad_hastasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="4.Ashwa Sanchalanasana(अश्व संचालन आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_ashwa_sanchalanasana_left"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Ashwa_sanchalanasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="5.Dandasana(दंडासन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_dandasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Dandasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="6.Ashtanga Namaskara(अष्टांग नमस्कार)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_ashtanga_namaskaar"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Ashtanga_Namaskaar_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="7.Bhujangasana(भुजंग आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_bhujangasan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Bhujangasan_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="8.Parvatasana(पर्वत आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_parvatasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Parvatasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="9.Ashwa Sanchalanasana(अश्वसंचालन आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_ashwa_sanchalanasana_right"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Ashwa_sanchalanasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="10.Padhastasan(पादहस्तासन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_pad_hastasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Pad_hastasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="11.Hastauttanasana(हस्तउत्थान आसन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_hastauttanasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/Hastauttanasana_process"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:padding="12sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:text="12.Tadasana(ताड़ासन)"/>
                <ImageView
                    android:layout_width="300sp"
                    android:layout_height="200sp"
                    android:layout_gravity="center"
                    android:src="@drawable/yog_tadasana"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10sp"
                    android:layout_marginLeft="10sp"
                    android:textSize="15dp"
                    android:text="@string/test"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>